# evk

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.bat  evk.cpp  evk.h  evk_ai.cpp  evk_ai.h  evk_internal.h  evk_metal.cpp  evk_metal.h  evk_vulkan.cpp  evk_vulkan.h  glsl.h  imgui_impl_evk.cpp  imgui_impl_evk.h  run.bat
example/: bench.h  bmp.h  main.cpp  main_llm.cpp  main_llm.md  tests.h  win_dbg.h
examples/simple/: main.cpp  win_dbg.h
metal-cpp/AppKit/: AppKitPrivate.hpp  NSView.hpp  NSWindow.hpp
metal-cpp/Foundation/: NSObject.hpp
metal-cpp/Metal/: Metal.hpp
shaders/: adam.comp  add.comp  causal_mask.comp  cross_entropy.comp  cross_entropy_count.comp  cross_entropy_scale.comp  embed.comp  embed_bwd.comp  evk.frag  flash_attention.comp  flash_attention_bwd.comp  gelu.comp  gelu_bwd.comp  greedy_sample.comp  matmul.comp  matmul_coop.comp  mse_loss.comp  position_add.comp  position_add_bwd.comp  relu.comp  relu_bwd.comp  rms_norm.comp  rms_norm_bwd.comp  rope.comp  rope_bwd.comp  scale.comp  sgd.comp  single_query_attention.comp  softmax.comp  softmax_bwd.comp  sum_batch.comp  transpose.comp  transpose_bwd.comp  zero.comp
spirv-cross/: README.md
